<resources>
    <string name="app_name">Checkboxes19110227</string>
    <string name="txt_chocolate">Chocolate syrup &#160;</string>
    <string name="txt_sprinkles">Sprinkles &#160;</string>
    <string name="txt_nuts">Crushed nuts &#160;</string>
    <string name="txt_cherries">Cherries &#160;</string>
    <string name="txt_cookie">Orio cookie crumbles &#160;</string>
    <string name="btn_show_toast">SHOW TOAST</string>
</resources>